<resources>
    <string name="app_name">Whiskeynote</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_image">写真を変更</string>
    <string name="hint_meigara">銘柄</string>
    <string name="text_button_save">save</string>
    <string name="scotch">スコッチ</string>
    <string name="japanese">ジャパニーズ</string>
    <string name="american">アメリカン</string>
    <string name="irish">アイリッシュ</string>
    <string name="canadian">カナディアン</string>
    <string name="others">その他</string>

    <!-- スクロールの確認のための長い文字列 -->
    <string name="polano_plaza">そのころわたくしは、モリーオ市の博物局に勤めて居りました。
 　十八等官でしたから役所のなかでも、ずうっと下の方でしたし俸給もほんのわずかでしたが、受持ちが標本の採集や整理で生れ付き好きなことでしたから、わたくしは毎日ずいぶん愉快にはたらきました。殊にそのころ、モリーオ市では競馬場を植物園に拵え直すというので、その景色のいいまわりにアカシヤを植え込んだ広い地面が、切符売場や信号所の建物のついたまま、わたくしどもの役所の方へまわって来たものですから、わたくしはすぐ宿直という名前で月賦で買った小さな蓄音器と二十枚ばかりのレコードをもって、その番小屋にひとり住むことになりました。わたくしはそこの馬を置く場所に板で小さなしきいをつけて一疋の山羊を飼いました。毎朝その乳をしぼってつめたいパンをひたしてたべ、それから黒い革のかばんへすこしの書類や雑誌を入れ、靴もきれいにみがき、並木のポプラの影法師を大股にわたって市の役所へ出て行くのでした。
 　あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。
 　またそのなかでいっしょになったたくさんのひとたち、ファゼーロとロザーロ、羊飼のミーロや、顔の赤いこどもたち、地主のテーモ、山猫博士のボーガント・デストゥパーゴなど、いまこの暗い巨きな石の建物のなかで考えていると、みんなむかし風のなつかしい青い幻燈のように思われます。では、わたくしはいつかの小さなみだしをつけながら、しずかにあの年のイーハトーヴォの五月から十月までを書きつけましょう。

 　　　　　　　一、遁げた山羊

 　五月のしまいの日曜でした。わたくしは賑やかな市の教会の鐘の音で眼をさましました。もう日はよほど登って、まわりはみんなきらきらしていました。時計を見るとちょうど六時でした。わたくしはすぐチョッキだけ着て山羊を見に行きました。すると小屋のなかはしんとして藁が凹んでいるだけで、あのみじかい角も白い髯も見えませんでした。
 「あんまりいい天気なもんだから大将ひとりででかけたな。」
 　わたくしは半分わらうように半分つぶやくようにしながら、向うの信号所からいつも放して遊ばせる輪道の内側の野原、ポプラの中から顔をだしている市はずれの白い教会の塔までぐるっと見まわしました。けれどもどこにもあの白い頭もせなかも見えていませんでした。うまやを一まわりしてみましたがやっぱりどこにも居ませんでした。
 「いったい山羊は馬だの犬のように前居たところや来る道をおぼえていて、そこへ戻っているということがあるのかなあ。」
 　わたくしはひとりで考えました。さあ、そう思うと早くそれを知りたくてたまらなくなりました。けれども役所のなかとちがって競馬場には物知りの年とった書記も居なければ、そんなことを書いた辞書もそこらにありませんでしたから、わたくしは何ということなしに輪道を半分通って、それからこの前山羊が村の人に連れられて来た路をそのまま野原の方へあるきだしました。
 　そこらの畑では燕麦もライ麦ももう芽をだしていましたし、これから何か蒔くとこらしくあたらしく掘り起こされているところもありました。
 　そしていつかわたくしは町から西南の方の村へ行くみちへはいってしまっていました。
 　向うからは黒い着物に白いきれをかぶった百姓のおかみさんたちがたくさん歩いてくるようすなのです。わたくしは気がついて、もう戻ってしまおうと思いました。全くの起きたままチョッキだけ着て顔もあらわず帽子もかむらず山羊が居るかどうかもわからない広い畑のまんなかへ飛びだして来ているのです。けれどもそのときはもう戻るのも工合が悪くなってしまっていました。向うの人たちがじき顔の見えるところまで来ているのです。わたくしは思い切って勢よく歩いて行っておじぎをして尋ねました。
 「こっちへ山羊が迷って来ていませんでしたでしょうか。」
 　女の人たちはみんな立ちどまってしまいました。教会へ行くところらしくバイブルも持っていたのです。
 「こっちへ山羊が一疋迷って来たんですが、ご覧になりませんでしたでしょうか。」
 　みんなは顔を見合せました。それから一人が答えました。
 「さあ、わたくしどもはまっすぐに来ただけですから。」
 　そうだ、山羊が迷って出たときに人のようにみちを歩くのではないのです。わたくしはおじぎしました。
 「いや、ありがとうございました。」女たちは行ってしまいました。もう戻ろう、けれどもいま戻るとあの女の人たちを通り越して行かなければならない、まあ散歩のつもりでもすこし行こう、けれどもさっぱりたよりない散歩だなあ、わたくしはひとりでにがわらいしました。そのとき向うから二十五六になる若者と十七ばかりのこどもとスコップをかついでやって来ました。もう仕方ない、みかけだけにたずねて見よう、わたくしはまたおじぎしました。
 「山羊が一疋迷ってこっちへ来たのですが、ごらんになりませんでしたでしょうか。」
 「山羊ですって、いいえ。連れてあるいて遁げたのですか。」
 「いいえ、小屋から遁げたんです。いや、ありがとうございました。」
 　わたくしはおじぎをしてまたあるきだしました。するとそのこどもがうしろで云いました。
 「ああ、向うから誰か来るなあ。あれそうでないかなあ。」
 　わたくしはふりかえって指ざされたほうを見ました。
 「ファゼーロだな、けれども山羊かなあ。」
 「山羊だよ。ああきっとあれだ。ファゼーロがいまごろ山羊なんぞ連れてあるく筈ないんだから。」
 　たしかにそれは山羊でした。けれどもそれは別ので売りに町へ行くのかもしれない、まああの指導標のところまで行って見よう、わたくしはそっちへ近づいて行きました。一人の頬の赤いチョッキだけ着た十七ばかりの子どもが、何だかわたくしのらしい雌の山羊の首に帯皮をつけて、はじを持ってわらいながらわたくしに近よって来ました。どうもわたくしのらしいけれども何と云おうと思いながら、わたくしはたちどまりました。すると子どもも立ちどまってわたくしにおじぎしました。
 「この山羊はおまえんだろう。」
 「そうらしいねえ。」
 「ぼく出てきたらたった一疋で迷っていたんだ。」
 「山羊もやっぱり犬のように一ぺんあるいた道をおぼえているのかねえ。」
 「おぼえてるとも。じゃ。やるよ。」
 「ああ、ほんとうにありがとう。わたしはねえ、顔も洗わないで探しに来たんだ。」
 「そんなに遠くから来たの。」
 「ああ、わたしは競馬場に居るからねえ。」
 「あすこから？」
 　子どもは山羊の首から帯皮をとりながら畑の向うでかげろうにぎらぎらゆれている、やっと青みがかったアカシヤの列を見ました。
 「すいぶん遠くまで来たんだねえ。」
 「ああ、じゃ、僕こっちへ行くんだから。さよなら。」
 「あ、ちょっと待って。ぼくなにかあげたいんだけれどもなんにもなくてねえ。」
 「いいや、ぼくなんにもいらないんだ。山羊を連れてくるのは面白かった。」
 「だけれどねえ、それではわたしが気が済まないんだよ。そうだ、あなたは鎖はいらないの。」
 　わたくしは時計の鎖なら、なくても済むと思いながら銀の鎖をはずしました。
 「いいや。」
 「磁石もついてるよ。」
 　すると子どもは顔をぱっと熱らせましたが、またあたりまえになって、
 「だめだ、磁石じゃ探せないから。」とぼんやり云いました。
 「磁石で探せないって？」私はびっくりしてたずねました。
 「ああ。」子どもは何か心もちのなかにかくしていたことを見られたというように少しあわてました。
 「何を探すっていうの。」
 　子どもはしばらくちゅうちょしていましたが、とうとう思い切ったらしく云いました。
 「ポラーノの広場。」
 「ポラーノの広場？　はてな、聞いたことがあるようだなあ。何だったろうねえ、ポラーノの広場。」
 「昔ばなしなんだけれども、このごろまたあるんだ。」
 「ああそうだ、わたしも小さいとき何べんも聞いた。野はらのまんなかの祭のあるとこだろう。あのつめくさの花の番号を数えて行くというのだろう。」
 「ああ、それは昔ばなしなんだ。けれども、どうもこの頃もあるらしいんだよ。」
 「どうして。」
 「だってぼくたちが夜野原へ出ていると、どこかでそんな音がするんだもの。」
 「音のする方へ行ったらいいんでないか。」
 「みんなで何べんも行ったけれども、わからなくなるんだよ。」
 「だって、聞えるくらいならそんなに遠い筈はないねえ。」
 「いいや、イーハトーヴォの野原は広いんだよ。霧のある日ならミーロだって迷うよ。」
 「そうさねえ、だけど地図もあるからねえ。」
 「野原の地図ができてるの。」
 「ああ、きっと四枚ぐらいにまたがってるねえ。」
 「その地図で見ると路でも林でもみんなわかるの。」
 「いくらか変っているかもしれないが、まあ大体はわかるだろう。じゃ、お礼にその地図を買って送ってあげようか。」
 「うん。」子どもは顔を赤くして云いました。
 「きみはファゼーロって云うんだね。宛名をどう書いたらいいかねえ。」
 「ぼく、ひまを見付けて、おまえんうちへ行くよ。」
 「ひまって、今日でもいいよ。」
 「ぼく仕事があるんだ。」
 「今日は日曜じゃないか。」
 「いいえ、ぼくには日曜はないんだ。」
 「どうして。」
 「だって仕事をしなけぁ。」
 「仕事ってきみのかい。」
 「旦那んさ。みんなもう行って畦へはいってるんだ。小麦（こむぎ）の草をとっているよ。」
 「じゃきみは主人のとこに雇われているんだね。」
 「ああ。」
 「お父さんたちは。」
 「ない。」
 「兄さんか誰かは。」
 「姉さんがいる。」
 「どこに。」
 「やっぱり旦那んとこに。」
 「そうかねえ。」
 「だけど姉さんは山猫博士のとこへ行くかも知れないよ。」
 「何だい。その山猫博士というのは。」
 「あだ名なんだ。ほんたうはデストゥパーゴって云うんだ。」
 「デストゥパーゴ？　ボーガント・デストゥパーゴかい。県の議員の。」
 「ええ。」
 「あいつは悪いやつだぜ。あいつのうちがこっちの方にあるのかい。」
 「ああ、ぼくの旦那のうちから見え……。」
 「おい、こら、何をぐずぐずしてるんだ。」うしろで大きな声がしました。見ると一人の赤い帽子をかぶった年老りの頑丈そうな百姓が革むちをもって怒って立っていました。
 「もう一くぎりも働いたかと思って来て見ると、まだこんなところに立ってしゃべくってやがる。早く仕事へ行け。」
 「はい、じゃさよなら。」
 「ああさよなら、ぼくは役所からいつでも五時半には帰っているからね。」
 「ええ。」
 　ファゼーロは水壺とホーをもって急いで向うの路へはいって行きました。百姓はこんどはわたくしに云いました。
 「あなたはどこのお方だか知らないが、これからわしの仕事にいらないお世話をして貰いたくないもんですな。」
 「いや、わたしはね、山羊に遁げられてそれをたずねて来たら、あの子どもさんが連れて来ていたもんだからお礼を云っていたんです。」
 「いや、結構ですよ。山羊というやつはどうも足があって歩くんでね。やいファゼーロ、かけて行け、馬鹿、かけて行けったら。」
 　百姓は顔をまっ赤にして手をあげて革むちをパチッと鳴らしました。
 「人を使うのに革むちを鳴らすなんて乱暴じゃないですか。」
 　百姓はわざと顔を前につき出して云いました。
 「このむちですかい。あなたはこの鞭のことを仰っしゃったんですか。この鞭はねえ、人を使う鞭ではありませんよ。馬を追う鞭ですよ。あっちへ馬が四疋も行ってますからねえ。そらね、こんなふうに。」
 　百姓はわたくしの顔の前でパチッパチッとはげしく鞭を鳴らしました。わたくしはさあっと血が頭にのぼるのを感じました。けれどもまた、いま争うときでないと考えて山羊の方を見ました。山羊はあちこち草をたべながら向うに行っていました。百姓はファゼーロの行った方へ行き、わたくしも山羊の方へ歩きだしました。山羊に追いついてからふりかえって見ますと畑いちめん紺いろの地平線までぎらぎらのかげろうで百姓の赤い頭巾もみんなごちゃごちゃにゆれていました。その向うの一そう烈しいかげろうの中でピカッと白くひかる農具と黒い影法師のようにあるいている馬と、ファゼーロかそれともほかのこどもか、しきりに手をふって馬をうごかしているのをわたくしは見ました。
    </string>
</resources>
