<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<data></data>-->
    <androidx.appcompat.widget.ContentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editing_image"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/change_image"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_image"
                    android:layout_gravity="center_horizontal"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundColor="@color/colorPrimary">

                    <io.github.aosa4054.whiskeynote.TextInputAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_meigara" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scotch" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/japanese" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/american" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/irish" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/canadian" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others" />
                </RadioGroup>

                <include layout="@layout/whiskey_types_chip_group"/>

                <!--
                味とか、値段、めもかな？-->

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fab_save"
            style="@style/extendedFab"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/text_button_save"
            app:icon="@drawable/ic_done_white_24dp"
            android:layout_gravity="center_horizontal|bottom"/>
    </androidx.appcompat.widget.ContentFrameLayout>
</layout>
